--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 <h1>ViseVersa</h1>
+<p>text Your Message</p>
 <form>
 <textarea id="userInput" name="userInput" rows="4" cols=40></textarea>
 <br><br><br>
